Fix position and layout of modal so the scroller doesn't overflow

--- a/app/styles/components/_modal.scss
+++ b/app/styles/components/_modal.scss
@@ -1,11 +1,8 @@
-
-
-//--------------------
-
 .reveal-modal-bg {
 	position: fixed;
 }
 
 .reveal-modal {
-	top: 10% !important;
+	height: auto !important;
+	top: 0 !important;
 }
